ossm1.1/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL # For TLS only use SIMPLE
      # credentialName: default-router-certs # must be the same as secret - OSSM 1.x not support SDS??
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      caCertificates: /etc/istio/ingressgateway-ca-certs/ca-chain.cert.pem # Client Cert Authen
    hosts:
    - 'frontend-DATA_PLANE.DOMAIN'
