ossm1.1/istio/backend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend.DATA_PLANE.svc.cluster.local
  http:
  - route:
    - destination:
        host: backend.DATA_PLANE.svc.cluster.local
